--- a/css/saludmental.css
+++ b/css/saludmental.css
@@ -38,11 +38,11 @@ body{
     width: 5%;
 }
 
-h1{
-    padding: 30px;
+.titulo {
+    padding: 3%;
 text-align: center;
-
 }
+
 h2{
     padding: 20px
 
@@ -646,13 +646,7 @@ h2 {
 .presentacion{
     display: inline;
 }
-.video{
-    text-align: center;
-}
-.serviobs{
-    padding-left:20px
-}
-}
+
     .oyt-subtitulos {
         font-size: 30px;
     }
@@ -707,13 +701,6 @@ h2 {
     .presentacion{
         display: inline;
     }
-    .video{
-        text-align: center;
-    }
-    .serviobs{
-        padding-left:20px
-    }
-    /*index*/
     .about-us-card--first {
         margin-top: 25px;
     }
@@ -786,7 +773,7 @@ h2 {
         width: 50%;
         padding: 20px;
    }
-
+ }
 
 @media(min-width:1024px){
 .p{
@@ -797,8 +784,43 @@ h2 {
 }
 .presentacion{
     display:inline-block
-
 }
+    .checkbtn{
+        display: block;
+    }
+    .menu-icon{
+        display: block;
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        cursor: pointer;
+    }
+    .nav-menu ul{
+        display: block;
+        position: fixed;
+        top:70px;
+        left:-100%;
+        background: #222;
+        width: 100%;
+        height: 100vh;
+        right: 0;
+    }
+    .nav-menu ul li{
+        padding: 2rem;
+        display: flex;
+        justify-content: center;
+        margin: 0;
+    }
+    .nav-menu ul li:last-child{
+        background: none;
+        padding: 1rem;
+    }
+    .menu li a {
+        padding: 56px;
+    }
+    .menu li ul {
+        min-width: 220px;
+    } 
     /* OYT MENU */
     .oyt-logo-clinica {
         width: 7%;
@@ -852,7 +874,8 @@ h2 {
     text-align: center;
     padding: 55px;
 }
-
+ }
+ 
 @media (max-width:768px){
     .checkbtn{
         display: block;
@@ -907,6 +930,42 @@ h2 {
 @media (max-width:900px) { 
     .logo-p {
         display: none;
+    }
+    .checkbtn{
+        display: block;
+    }
+    .menu-icon{
+        display: block;
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        cursor: pointer;
+    }
+    .nav-menu ul{
+        display: block;
+        position: fixed;
+        top:70px;
+        left:-100%;
+        background: #222;
+        width: 100%;
+        height: 100vh;
+        right: 0;
+    }
+    .nav-menu ul li{
+        padding: 2rem;
+        display: flex;
+        justify-content: center;
+        margin: 0;
+    }
+    .nav-menu ul li:last-child{
+        background: none;
+        padding: 1rem;
+    }
+    .menu li a {
+        padding: 56px;
+    }
+    .menu li ul {
+        min-width: 220px;
     }
 }
 
